files/app.dark.css
.row {
    overflow-x: hidden;
}
.chatcontainer {
  height: 100%;
}
a.fancybox img {
  border: none;
  box-shadow: 0 1px 7px rgba(0, 0, 0, 0.6);
  -o-transform: scale(1, 1);
  -ms-transform: scale(1, 1);
  -moz-transform: scale(1, 1);
  -webkit-transform: scale(1, 1);
  transform: scale(1, 1);
  -o-transition: all 0.2s ease-in-out;
  -ms-transition: all 0.2s ease-in-out;
  -moz-transition: all 0.2s ease-in-out;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
}
a.fancybox:hover img {
  position: relative;
  z-index: 999;
  -o-transform: scale(1.03, 1.03);
  -ms-transform: scale(1.03, 1.03);
  -moz-transform: scale(1.03, 1.03);
  -webkit-transform: scale(1.03, 1.03);
  transform: scale(1.03, 1.03);
}
#messages {
  list-style-type: none;
  margin: 0;
  padding: 0;
}
.you a {
    color: #0027ff;
}
#m {
  width: 100%;
  margin-bottom: 0;
  height: 3rem;
}
#messages li {
  background-image: url(/files/unknown.png);
  background-repeat: no-repeat;
  background-size: 35px 35px;
  background-position: top left;
  word-wrap: break-word;
}
#messages li p {
  background-color: #474747;
  border-radius: 15px;
  margin-right: 10px;
  margin-left: 40px;
  display: inline-block;
  padding: 5px 10px;
}
#messages li.you p {
  background-color: rgb(102, 153, 204);
  color: #fff;
}
#messages li p b {
  display: block;
}
#messages li.you p b {
  display: none;
}
.send {
  width: 100%;
  height: 3rem;
}
.alert-box {
  margin-bottom: 0;
  font-weight: 600;
  font-size: 16px;
  text-align: center;
}
.typing {
  padding: 0;
  background-color: #FFF;
  border-color: #fff;
  color: #c3c3c3;
  display: inline-block;
}
#messages {
  height: 60vh;
  overflow: auto;
}
.upload-space {
  height: 200px;
  background: #DADADA;
  font-family: monospace;
  border: 1px #B9B9B9 solid;
  border-radius: 2px;
  padding: 30px;
}
.replyform {
  display: none;
}
.selected .replyform {
  display: block
}
.upload-space2, .upload-space3 {
  height: 50px;
  background: #393939;
  font-family: monospace;
  border: 1px #000 solid;
  border-radius: 2px;
  padding: 15px;
  width: 75% !important;
}
#messages li.you {
  text-align: right;
}
.msgimg .image {
    max-width: 75vw;
}
/*.top-bar {
  position: fixed;
  right: 0;
  left: 0;
  max-width: 62.5rem;
  margin: auto;
  z-index: 999;
}*/

.top-bar.expanded {
  background: #333;
  z-index: 999;
  position: fixed;
  margin-top: -45px;
  width: 100%;
}
.reveal-modal {
  z-index: 9999;
}
.main {
  width: 100vw;
  overflow: hidden;
  position: absolute;
  right: 0;
  left: 0;
  bottom: 0;
}
.parent-link {
  display: none !important;
}
.imgcontainer {
  width: 100%;
  height: 100%;
  text-align: center;
}
.imgcontainer img {
  max-width: 100%;
  max-height: 100%;
}
.image {
  max-height: 50vh;
}
.full-screen {
  width: 100vw;
  height: 100vh;
  max-width: 100vw;
  max-height: 100vh;
  top: 0;
  bottom: 0;
  right: 0;
  left: 0;
  border-radius: 0;
  border: none;
}
.download {
  position: fixed;
  bottom: 0;
  right: 0;
  padding: 15px;
  color: #B9B9B9;
  opacity: 0.2;
}
.download:hover {
  opacity: 1;
}
.preview-image {
  text-align: center;
  background-color: #000;
}
.preview-image.medium-3 img {
  max-height: 200px;
  max-width: 100%;
}
.row .row {
  margin: 0 !important;
}
.loading {
  background-image: url(https://i.imgur.com/JuU08.gif);
  background-position: center center;
  background-size: contain;
  background-repeat: no-repeat;
  height: 35vh;
  /*! background-color: #000; */
}
.loading * {
    display: none;
}
.tabs-content {
  margin-bottom: 0 !important;
}
img[src=""] {
  display: none;
}

